--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@angular/router": "~19.2.0",
     "@angular/ssr": "~19.2.0",
     "express": "^4.21.2",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "rxjs": "~7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.2.0",
