--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
