--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@ssrmart/server/products": ["libs/server/products/src/index.ts"],
+      "@ssrmart/shared/types": ["libs/shared/types/src/index.ts"]
+    },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
