--- a/package.json
+++ b/package.json
@@ -9,65 +9,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^19.2.0",
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/material": "^19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/platform-server": "~19.2.0",
-    "@angular/router": "~19.2.0",
-    "@angular/ssr": "~19.2.0",
+    "@angular/cdk": "20.0.5",
+    "@angular/common": "20.0.6",
+    "@angular/compiler": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/material": "20.0.5",
+    "@angular/platform-browser": "20.0.6",
+    "@angular/platform-browser-dynamic": "20.0.6",
+    "@angular/platform-server": "20.0.6",
+    "@angular/router": "20.0.6",
+    "@angular/ssr": "20.0.5",
     "express": "^4.21.2",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
+    "@angular-devkit/build-angular": "20.0.5",
+    "@angular-devkit/core": "20.0.5",
+    "@angular-devkit/schematics": "20.0.5",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.6",
+    "@angular/language-service": "20.0.6",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.0.3",
-    "@nx/devkit": "21.0.3",
-    "@nx/eslint": "21.0.3",
-    "@nx/eslint-plugin": "21.0.3",
-    "@nx/jest": "21.0.3",
-    "@nx/js": "21.0.3",
-    "@nx/playwright": "21.0.3",
-    "@nx/web": "21.0.3",
-    "@nx/workspace": "21.0.3",
+    "@nx/angular": "21.2.2",
+    "@nx/devkit": "21.2.2",
+    "@nx/eslint": "21.2.2",
+    "@nx/eslint-plugin": "21.2.2",
+    "@nx/jest": "21.2.2",
+    "@nx/js": "21.2.2",
+    "@nx/playwright": "21.2.2",
+    "@nx/web": "21.2.2",
+    "@nx/workspace": "21.2.2",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~19.2.0",
+    "@schematics/angular": "20.0.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.19.0",
-    "angular-eslint": "^19.2.0",
+    "@typescript-eslint/utils": "^8.33.1",
+    "angular-eslint": "20.0.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
+    "jest-preset-angular": "14.6.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.0.3",
+    "nx": "21.2.2",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.33.1"
   },
   "nx": {
     "includedScripts": []
