feat: bestsellers section

--- a/nx.json
+++ b/nx.json
@@ -75,6 +75,7 @@
       "unitTestRunner": "jest"
     },
     "@nx/angular:component": {
+      "style": "css",
       "type": "component"
     },
     "@schematics/angular:component": {
