feat: fetching bestsellers

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ssrmart/client/data-access-product": [
+        "libs/client/data-access-product/src/index.ts"
+      ],
       "@ssrmart/client/feature-home-page": [
         "libs/client/feature-home-page/src/index.ts"
       ],
@@ -25,6 +28,7 @@
         "libs/client/ui-product-card/src/index.ts"
       ],
       "@ssrmart/server/products": ["libs/server/products/src/index.ts"],
+      "@ssrmart/shared/config": ["libs/shared/config/src/index.ts"],
       "@ssrmart/shared/types": ["libs/shared/types/src/index.ts"]
     }
   },
