--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.6.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~20.0.0",
     "nx": "21.2.2",
     "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
