--- a/libs/client/products/data-access-product/project.json
+++ b/libs/client/products/data-access-product/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "ssrmart-client-data-access-product",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client/data-access-product/src",
+  "name": "ssrmart-client-products-data-access",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/client/products/data-access-product/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
@@ -10,14 +10,14 @@
       "executor": "@nx/angular:ng-packagr-lite",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/client/data-access-product/ng-package.json"
+        "project": "libs/client/products/data-access-product/ng-package.json"
       },
       "configurations": {
         "production": {
-          "tsConfig": "libs/client/data-access-product/tsconfig.lib.prod.json"
+          "tsConfig": "libs/client/products/data-access-product/tsconfig.lib.prod.json"
         },
         "development": {
-          "tsConfig": "libs/client/data-access-product/tsconfig.lib.json"
+          "tsConfig": "libs/client/products/data-access-product/tsconfig.lib.json"
         }
       },
       "defaultConfiguration": "production"
@@ -26,7 +26,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client/data-access-product/jest.config.ts"
+        "jestConfig": "libs/client/products/data-access-product/jest.config.ts"
       }
     },
     "lint": {
