--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,15 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ssrmarket/client/utils": ["libs/client/utils/src/index.ts"],
       "@ssrmart/client/feature-home-page": [
         "libs/client/feature-home-page/src/index.ts"
       ],
       "@ssrmart/client/feature-shell": [
         "libs/client/feature-shell/src/index.ts"
+      ],
+      "@ssrmart/client/products/feature-product-search-page": [
+        "libs/client/products/feature-product-search-page/src/index.ts"
       ],
       "@ssrmart/client/products/products-data-access": [
         "libs/client/products/data-access-product/src/index.ts"
