--- a/libs/server/products/project.json
+++ b/libs/server/products/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/server/products/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["scope:server"],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
