--- a/libs/shared/config/project.json
+++ b/libs/shared/config/project.json
@@ -4,7 +4,7 @@
   "sourceRoot": "libs/shared/config/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": [],
+  "tags": ["scope:shared", "type:util"],
   "targets": {
     "build": {
       "executor": "@nx/angular:ng-packagr-lite",
