--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.33.1"
