--- a/project.json
+++ b/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "prefix": "ssrmart",
   "sourceRoot": "./src",
-  "tags": [],
+  "tags": ["scope:client"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
@@ -65,6 +65,9 @@
     "serve": {
       "continuous": true,
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "allowedHosts": ["b98b5ab8e8f0.ngrok-free.app", ".ngrok-free.app"]
+      },
       "configurations": {
         "production": {
           "buildTarget": "ssrmart:build:production"
