--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "@ssrmart/source",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "vercel-build": "nx build"
   },
   "private": true,
   "dependencies": {
