--- a/project.json
+++ b/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "prefix": "ssrmart",
   "sourceRoot": "./src",
-  "tags": ["scope:client"],
+  "tags": ["scope:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
@@ -45,7 +45,13 @@
               "maximumError": "8kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.prod.ts"
+            }
+          ]
         },
         "development": {
           "optimization": {
