--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,14 @@
     "baseUrl": ".",
     "paths": {
       "@ssrmart/client/data-access": ["libs/client/data-access/src/index.ts"],
+      "@ssrmart/client/feature-about-page": [
+        "libs/client/feature-about-page/src/index.ts"
+      ],
       "@ssrmart/client/feature-home-page": [
         "libs/client/feature-home-page/src/index.ts"
+      ],
+      "@ssrmart/client/feature-legal": [
+        "libs/client/feature-legal/src/index.ts"
       ],
       "@ssrmart/client/feature-shell": [
         "libs/client/feature-shell/src/index.ts"
