--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "20.0.6",
     "@angular/ssr": "20.0.5",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "rxjs": "~7.8.0"
   },
@@ -48,6 +49,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
