--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,6 +39,7 @@
       ],
       "@ssrmart/client/utils": ["libs/client/utils/src/index.ts"],
       "@ssrmart/server/products": ["libs/server/products/src/index.ts"],
+      "@ssrmart/server/seo": ["libs/server/seo/src/index.ts"],
       "@ssrmart/shared/config": ["libs/shared/config/src/index.ts"],
       "@ssrmart/shared/types": ["libs/shared/types/src/index.ts"]
     }
