--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-server": "20.0.6",
     "@angular/router": "20.0.6",
     "@angular/ssr": "20.0.5",
+    "@types/leaflet": "^1.9.20",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
