--- a/nx.json
+++ b/nx.json
@@ -17,7 +17,7 @@
   },
   "targetDefaults": {
     "@angular-devkit/build-angular:application": {
-      "cache": true,
+      "cache": false,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
