feat: implement all seo and og tags

--- a/nx.json
+++ b/nx.json
@@ -135,5 +135,8 @@
       "typeSeparator": "."
     }
   },
-  "defaultProject": "ssrmart"
+  "defaultProject": "ssrmart",
+  "tui": {
+    "enabled": false
+  }
 }
