--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "20.0.6",
     "@angular/router": "20.0.6",
     "@angular/ssr": "20.0.5",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@types/leaflet": "^1.9.20",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -37,6 +39,7 @@
     "@angular/compiler-cli": "20.0.6",
     "@angular/language-service": "20.0.6",
     "@eslint/js": "^9.8.0",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
     "@nx/angular": "21.2.2",
     "@nx/devkit": "21.2.2",
     "@nx/eslint": "21.2.2",
