--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@types/leaflet": "^1.9.20",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "leaflet": "^1.9.4",
-    "rxjs": "~7.8.0"
+    "rxjs": "~7.8.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.0.5",
@@ -54,6 +56,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
